# Carder

./: README.md  main.py  pyproject.toml
carder/: PIL.py  carder.py  cli.py  errors.py  utils.py
tests/: test_PIL.py  test_carder.py  test_utils.py  utils.py
