[tool.poetry]
name = "carder"
version = "0.1.0"
description = "A cli tool in Python to make printable playing cards from a template"
authors = ["Mael Arnaud <mael.arnaud@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
unidecode = "^1.3.6"
toml = "^0.10.2"
click = "^8.1.3"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
